[package]
name = "subspedia-rs"
version = "0.1.4"
authors = ["thymbahutymba <andrea.stevanato.95@hotmail.it>"]
license = "LGPL-3.0"
description = "Library for subspedia.tv"

[dependencies]
hyper = "0.12.10"
hyper-tls = "0.3"
futures = "0.1.24"
tokio = "0.1.8"
serde = "1.0.79"
serde_json = "1.0.28"
serde_derive = "1.0.79"
failure = "0.1.2"
failure_derive = "0.1.2"